@@ -20,55 +20,54 @@ import static io.camunda.operate.OperateProfileService.SSO_AUTH_PROFILE;
 import static io.camunda.operate.property.Auth0Properties.DEFAULT_ORGANIZATIONS_KEY;
 import static io.camunda.operate.util.CollectionUtil.asMap;
 import static io.camunda.operate.webapp.security.OperateURIs.LOGIN_RESOURCE;
-import static io.camunda.operate.webapp.security.OperateURIs.LOGOUT_RESOURCE;
 import static io.camunda.operate.webapp.security.OperateURIs.NO_PERMISSION;
 import static io.camunda.operate.webapp.security.OperateURIs.ROOT;
 import static io.camunda.operate.webapp.security.OperateURIs.SSO_CALLBACK_URI;
+import static io.camunda.operate.webapp.security.OperateURIs.X_CSRF_TOKEN;
 import static org.assertj.core.api.Assertions.assertThat;
 import static org.mockito.ArgumentMatchers.*;
 import static org.mockito.BDDMockito.given;
-import static org.mockito.Mockito.doThrow;
 import static org.mockito.Mockito.mock;
 import static org.mockito.Mockito.when;
 
 import com.auth0.AuthenticationController;
 import com.auth0.AuthorizeUrl;
-import com.auth0.IdentityVerificationException;
 import com.auth0.Tokens;
-import com.fasterxml.jackson.databind.ObjectMapper;
 import io.camunda.operate.OperateProfileService;
-import io.camunda.operate.management.IndicesCheck;
 import io.camunda.operate.property.OperateProperties;
 import io.camunda.operate.util.SpringContextHolder;
 import io.camunda.operate.util.apps.nobeans.TestApplicationWithNoBeans;
+import io.camunda.operate.webapp.api.v1.dao.ProcessDefinitionDao;
+import io.camunda.operate.webapp.api.v1.rest.ProcessDefinitionController;
+import io.camunda.operate.webapp.elasticsearch.reader.ProcessInstanceReader;
+import io.camunda.operate.webapp.reader.ProcessReader;
 import io.camunda.operate.webapp.rest.AuthenticationRestService;
-import io.camunda.operate.webapp.security.AuthenticationTestable;
+import io.camunda.operate.webapp.rest.ProcessRestService;
 import io.camunda.operate.webapp.security.OperateURIs;
-import io.camunda.operate.webapp.security.Permission;
 import io.camunda.operate.webapp.security.auth.RolePermissionService;
 import io.camunda.operate.webapp.security.oauth2.CCSaaSJwtAuthenticationTokenValidator;
 import io.camunda.operate.webapp.security.oauth2.Jwt2AuthenticationTokenConverter;
 import io.camunda.operate.webapp.security.oauth2.OAuth2WebConfigurer;
 import io.camunda.operate.webapp.security.sso.model.ClusterInfo;
 import io.camunda.operate.webapp.security.sso.model.ClusterInfo.SalesPlan;
-import io.camunda.operate.webapp.security.sso.model.ClusterMetadata;
+import io.camunda.operate.webapp.writer.BatchOperationWriter;
+import java.net.URI;
 import java.util.Base64;
 import java.util.Collections;
 import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
+import java.util.Optional;
 import java.util.function.BiFunction;
 import org.json.JSONObject;
 import org.junit.Before;
 import org.junit.ClassRule;
 import org.junit.Rule;
 import org.junit.Test;
-import org.springframework.beans.factory.BeanFactory;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.beans.factory.annotation.Qualifier;
 import org.springframework.boot.test.context.SpringBootTest;
 import org.springframework.boot.test.mock.mockito.MockBean;
-import org.springframework.boot.test.mock.mockito.SpyBean;
 import org.springframework.boot.test.web.client.TestRestTemplate;
 import org.springframework.boot.test.web.server.LocalServerPort;
 import org.springframework.context.ApplicationContext;
@@ -76,6 +75,7 @@ import org.springframework.http.HttpEntity;
 import org.springframework.http.HttpHeaders;
 import org.springframework.http.HttpMethod;
 import org.springframework.http.HttpStatus;
+import org.springframework.http.MediaType;
 import org.springframework.http.ResponseEntity;
 import org.springframework.test.context.ActiveProfiles;
 import org.springframework.test.context.junit4.rules.SpringClassRule;
@@ -97,10 +97,12 @@ import org.springframework.web.client.RestTemplate;
       RolePermissionService.class,
       OperateURIs.class,
       OperateProperties.class,
-      OperateProfileService.class
+      OperateProfileService.class,
+      ProcessRestService.class,
+      ProcessDefinitionController.class
     },
     properties = {
-      "server.servlet.context-path=" + AuthenticationIT.CONTEXT_PATH,
+      "server.servlet.context-path=" + CsrfTokenIT.CONTEXT_PATH,
       "camunda.operate.auth0.clientId=1",
       "camunda.operate.auth0.clientSecret=2",
       "camunda.operate.cloud.organizationId=3",
@@ -113,31 +115,30 @@ import org.springframework.web.client.RestTemplate;
     },
     webEnvironment = SpringBootTest.WebEnvironment.RANDOM_PORT)
 @ActiveProfiles(SSO_AUTH_PROFILE)
-public class AuthenticationIT implements AuthenticationTestable {
+public class CsrfTokenIT {
 
   public static final SalesPlan OPERATE_TEST_SALESPLAN = new SalesPlan("test");
-
   public static final String CONTEXT_PATH = "/operate-test";
   @ClassRule public static final SpringClassRule SPRING_CLASS_RULE = new SpringClassRule();
   @Rule public final SpringMethodRule springMethodRule = new SpringMethodRule();
   private final BiFunction<String, String, Tokens> orgExtractor =
-      AuthenticationIT::tokensWithOrgAsMapFrom;
+      CsrfTokenIT::tokensWithOrgAsMapFrom;
   @LocalServerPort private int randomServerPort;
   @Autowired private TestRestTemplate testRestTemplate;
   @Autowired private OperateProperties operateProperties;
   @MockBean private AuthenticationController authenticationController;
-  @SpyBean private Auth0Service auth0Service;
-  @Autowired private BeanFactory beanFactory;
-  @Autowired private ObjectMapper objectMapper;
   @Autowired private ApplicationContext applicationContext;
 
   @MockBean
   @Qualifier("auth0_restTemplate")
   private RestTemplate restTemplate;
 
-  @MockBean private IndicesCheck probes;
+  @MockBean private ProcessReader processReader;
+  @MockBean private ProcessInstanceReader processInstanceReader;
+  @MockBean private BatchOperationWriter batchOperationWriter;
+  @MockBean private ProcessDefinitionDao processDefinitionDao;
 
-  private static Tokens tokensWithOrgAsMapFrom(String claim, String organization) {
+  private static Tokens tokensWithOrgAsMapFrom(final String claim, final String organization) {
     final String emptyJSONEncoded = toEncodedToken(Collections.EMPTY_MAP);
     final long expiresInSeconds = System.currentTimeMillis() / 1000 + 10000; // now + 10 seconds
     final Map<String, Object> orgMap = Map.of("id", organization);
@@ -160,15 +161,15 @@ public class AuthenticationIT implements AuthenticationTestable {
         5L);
   }
 
-  private static String toEncodedToken(Map map) {
+  private static String toEncodedToken(final Map map) {
     return toBase64(toJSON(map));
   }
 
-  private static String toBase64(String input) {
+  private static String toBase64(final String input) {
     return new String(Base64.getEncoder().encode(input.getBytes()));
   }
 
-  private static String toJSON(Map map) {
+  private static String toJSON(final Map map) {
     return new JSONObject(map).toString();
   }
 
@@ -187,45 +188,7 @@ public class AuthenticationIT implements AuthenticationTestable {
   }
 
   @Test
-  public void testHandleInvalidRequestException() throws Exception {
-    // Step 1 try to access document root
-    ResponseEntity<String> response = get(ROOT);
-    final HttpEntity<?> cookies = httpEntityWithCookie(response);
-
-    assertThatRequestIsRedirectedTo(response, urlFor(LOGIN_RESOURCE));
-
-    // Step 2 Get Login provider url
-    response = get(LOGIN_RESOURCE, cookies);
-    assertThat(redirectLocationIn(response))
-        .contains(
-            operateProperties.getAuth0().getDomain(),
-            SSO_CALLBACK_URI,
-            operateProperties.getAuth0().getClientId(),
-            operateProperties.getAuth0().getDomain());
-    // Step 3 Call back uri with valid userinfos
-    // mock building tokens
-    given(authenticationController.handle(isNotNull(), isNotNull()))
-        .willReturn(
-            orgExtractor.apply(
-                operateProperties.getAuth0().getClaimName(),
-                operateProperties.getCloud().getOrganizationId()));
-    doThrow(
-            new Auth0ServiceException(
-                new Exception("Invalid response code from the auth0-sandbox: HTTP 502.")))
-        .when(auth0Service)
-        .authenticate(any(), any());
-    response = get(SSO_CALLBACK_URI, cookies);
-
-    assertThat(redirectLocationIn(response))
-        .contains(
-            operateProperties.getAuth0().getDomain(),
-            "logout",
-            operateProperties.getAuth0().getClientId(),
-            urlFor(ROOT));
-  }
-
-  @Test
-  public void testLoginSuccess() throws Exception {
+  public void testAccessToInternalAPIWithoutCSRF() throws Exception {
     mockPermissionAllowed();
     // Step 1 try to access document root
     ResponseEntity<String> response = get(ROOT);
@@ -252,237 +215,100 @@ public class AuthenticationIT implements AuthenticationTestable {
     response = get(SSO_CALLBACK_URI, cookies);
     assertThatRequestIsRedirectedTo(response, urlFor(ROOT));
 
-    response = get(ROOT, cookies);
-    // Check if access to url possible
-    assertThat(response.getStatusCode()).isEqualTo(HttpStatus.OK);
-    assertThatSecurityHeadersAreSet(response);
+    final var headers = new HttpHeaders();
+    headers.setContentType(MediaType.APPLICATION_JSON);
+    // Set session cookie - otherwise you get an 401 UNAUTHORIZED
+    headers.add("Cookie", cookies.getHeaders().get("Cookie").getFirst());
+    final var request = new HttpEntity<>("{}", headers);
+    final var internalAPIresponse =
+        testRestTemplate.postForEntity("/api/processes/grouped", request, Object.class);
+    assertThat(internalAPIresponse.getStatusCode()).isEqualTo(HttpStatus.FORBIDDEN);
   }
 
   @Test
-  public void testLoginFailedWithNoReadPermissions() throws Exception {
-    mockNoReadPermission();
-    // Step 1 try to access document root
-    ResponseEntity<String> response = get(ROOT);
-    final HttpEntity<?> cookies = httpEntityWithCookie(response);
-
-    assertThatRequestIsRedirectedTo(response, urlFor(LOGIN_RESOURCE));
-
-    // Step 2 Get Login provider url
-    response = get(LOGIN_RESOURCE, cookies);
-    assertThat(redirectLocationIn(response))
-        .contains(
-            operateProperties.getAuth0().getDomain(),
-            SSO_CALLBACK_URI,
-            operateProperties.getAuth0().getClientId(),
-            operateProperties.getAuth0().getDomain());
-    // Step 3 Call back uri with valid userdata
-    given(authenticationController.handle(isNotNull(), isNotNull()))
-        .willReturn(
-            orgExtractor.apply(
-                operateProperties.getAuth0().getClaimName(),
-                operateProperties.getCloud().getOrganizationId()));
-
-    response = get(SSO_CALLBACK_URI, cookies);
-    assertThat(redirectLocationIn(response)).contains(NO_PERMISSION);
-
-    response = get(ROOT, cookies);
-    // Check that access to url is not possible
-    assertThatRequestIsRedirectedTo(response, urlFor(LOGIN_RESOURCE));
-  }
-
-  @Test
-  public void testLoginSucceedWithNoWritePermissions() throws Exception {
-    // Step 1 try to access document root
-    ResponseEntity<String> response = get(ROOT);
-    final HttpEntity<?> cookies = httpEntityWithCookie(response);
-
-    assertThatRequestIsRedirectedTo(response, urlFor(LOGIN_RESOURCE));
-
-    // Step 2 Get Login provider url
-    mockNoWritePermission();
-    response = get(LOGIN_RESOURCE, cookies);
-    assertThat(redirectLocationIn(response))
-        .contains(
-            operateProperties.getAuth0().getDomain(),
-            SSO_CALLBACK_URI,
-            operateProperties.getAuth0().getClientId(),
-            operateProperties.getAuth0().getDomain());
-    // Step 3 Call back uri with valid userdata
-    given(authenticationController.handle(isNotNull(), isNotNull()))
-        .willReturn(
-            orgExtractor.apply(
-                operateProperties.getAuth0().getClaimName(),
-                operateProperties.getCloud().getOrganizationId()));
-
-    get(SSO_CALLBACK_URI, cookies);
-
-    final TokenAuthentication authentication =
-        new TokenAuthentication(
-            operateProperties.getAuth0(), operateProperties.getCloud().getOrganizationId());
-    assertThat(authentication.getPermissions().contains(Permission.WRITE)).isEqualTo(false);
-
-    // successfully redirect to root even without write permission
-    response = get(ROOT, cookies);
-
-    assertThat(response.getStatusCode()).isEqualTo(HttpStatus.OK);
-  }
-
-  @Test
-  public void testLoginFailedWithNoPermissions() throws Exception {
-    // Step 1 try to access document root
-    ResponseEntity<String> response = get(ROOT);
-    final HttpEntity<?> cookies = httpEntityWithCookie(response);
-
-    assertThatRequestIsRedirectedTo(response, urlFor(LOGIN_RESOURCE));
-
-    // Step 2 Get Login provider url
-    mockNoReadPermission();
-    response = get(LOGIN_RESOURCE, cookies);
-    assertThat(redirectLocationIn(response))
-        .contains(
-            operateProperties.getAuth0().getDomain(),
-            SSO_CALLBACK_URI,
-            operateProperties.getAuth0().getClientId(),
-            operateProperties.getAuth0().getDomain());
-    // Step 3 Call back uri with invalid userdata
-    given(authenticationController.handle(isNotNull(), isNotNull()))
-        .willReturn(
-            orgExtractor.apply(operateProperties.getAuth0().getClaimName(), "wrong-organization"));
-
-    response = get(SSO_CALLBACK_URI, cookies);
-    assertThat(redirectLocationIn(response)).contains(NO_PERMISSION);
-
-    response = get(ROOT, cookies);
-    // Check that access to url is not possible
-    assertThatRequestIsRedirectedTo(response, urlFor(LOGIN_RESOURCE));
-  }
-
-  @Test
-  public void testLoginFailedWithOtherException() throws Exception {
-    // Step 1 try to access document root
-    ResponseEntity<String> response = get(ROOT);
-    final HttpEntity<?> cookies = httpEntityWithCookie(response);
-
-    assertThatRequestIsRedirectedTo(response, urlFor(LOGIN_RESOURCE));
-
-    // Step 2 Get Login provider url
+  public void testAccessToInternalAPIWithCSRF() throws Exception {
     mockPermissionAllowed();
-    response = get(LOGIN_RESOURCE, cookies);
-    assertThat(redirectLocationIn(response))
-        .contains(
-            operateProperties.getAuth0().getDomain(),
-            SSO_CALLBACK_URI,
-            operateProperties.getAuth0().getClientId(),
-            operateProperties.getAuth0().getDomain());
-    // Step 3 Call back uri, but there is an IdentityVerificationException.
-    doThrow(IdentityVerificationException.class)
-        .when(authenticationController)
-        .handle(any(), any());
-
-    response = get(SSO_CALLBACK_URI, cookies);
-    assertThatRequestIsRedirectedTo(response, urlFor(NO_PERMISSION));
-  }
-
-  @Test
-  public void testLogout() throws Throwable {
-    // Step 1 Login
-    mockPermissionAllowed();
+    // Step 1 try to access document root
     ResponseEntity<String> response = get(ROOT);
     final HttpEntity<?> cookies = httpEntityWithCookie(response);
-    response = get(LOGIN_RESOURCE, cookies);
-    given(authenticationController.handle(isNotNull(), isNotNull()))
-        .willReturn(
-            orgExtractor.apply(
-                operateProperties.getAuth0().getClaimName(),
-                operateProperties.getCloud().getOrganizationId()));
-    response = get(SSO_CALLBACK_URI, cookies);
-    response = get(ROOT, cookies);
 
-    assertThat(response.getStatusCode()).isEqualTo(HttpStatus.OK);
-    // Step 2 logout
-    response = get(LOGOUT_RESOURCE, cookies);
-    assertThat(redirectLocationIn(response))
-        .contains(
-            operateProperties.getAuth0().getDomain(),
-            "logout",
-            operateProperties.getAuth0().getClientId(),
-            urlFor(ROOT));
-    // Redirected to Login
-    response = get(ROOT);
     assertThatRequestIsRedirectedTo(response, urlFor(LOGIN_RESOURCE));
-  }
 
-  @Test
-  public void testLoginToAPIResource() throws Exception {
-    // Step 1 try to access user info
-    final String userInfoUrl = AuthenticationRestService.AUTHENTICATION_URL + "/user";
-    ResponseEntity<String> response = get(userInfoUrl);
-
-    assertThat(response.getStatusCode()).isEqualTo(HttpStatus.UNAUTHORIZED);
-
-    HttpEntity<?> httpEntity = new HttpEntity<>(new HashMap<>());
     // Step 2 Get Login provider url
-    mockPermissionAllowed();
-    mockClusterMetadata();
-    response = get(LOGIN_RESOURCE, httpEntity);
-
+    response = get(LOGIN_RESOURCE, cookies);
     assertThat(redirectLocationIn(response))
         .contains(
             operateProperties.getAuth0().getDomain(),
             SSO_CALLBACK_URI,
             operateProperties.getAuth0().getClientId(),
             operateProperties.getAuth0().getDomain());
-    // Step 3 Call back uri
+    // Step 3 Call back uri with valid userinfos
+    // mock building tokens
     given(authenticationController.handle(isNotNull(), isNotNull()))
         .willReturn(
             orgExtractor.apply(
                 operateProperties.getAuth0().getClaimName(),
                 operateProperties.getCloud().getOrganizationId()));
 
-    response = get(SSO_CALLBACK_URI, httpEntity);
-    httpEntity = httpEntityWithCookie(response);
+    response = get(SSO_CALLBACK_URI, cookies);
+    assertThatRequestIsRedirectedTo(response, urlFor(ROOT));
+    response = get(ROOT, cookies);
 
-    // Test no ClusterMetadata
-    mockEmptyClusterMetadata();
-    response = get(userInfoUrl, httpEntity);
-    assertThat(response.getBody()).contains("\"c8Links\":{}");
-
-    mockClusterMetadata();
-    response = get(userInfoUrl, httpEntity);
-    final String c8Links =
-        "{\"console\":\"https://console.audience/org/3/cluster/test-clusterId\","
-            + "\"operate\":\"http://operate-url\","
-            + "\"optimize\":\"http://optimize-url\","
-            + "\"modeler\":\"https://modeler.audience/org/3\","
-            + "\"tasklist\":\"http://tasklist-url\","
-            + "\"zeebe\":\"grpc://zeebe-url\"}";
-    assertThat(response.getBody()).contains("\"displayName\":\"operate-testuser\"");
-    assertThat(response.getBody()).contains("\"username\":\"operate-testuser\"");
-    assertThat(response.getBody()).contains("\"salesPlanType\":\"test\"");
-    assertThat(response.getBody()).contains("\"roles\":[\"user\",\"analyst\"]");
-    assertThat(response.getBody()).contains("\"c8Links\":" + c8Links);
+    final var headers = new HttpHeaders();
+    headers.setContentType(MediaType.APPLICATION_JSON);
+    // Set session cookie - otherwise you get an 401 UNAUTHORIZED
+    headers.add("Cookie", cookies.getHeaders().get("Cookie").getFirst());
+    // Add CSRF token as cookie - otherwise you get an 403 FORBIDDEN
+    getCsrfCookie(response).ifPresent(csrfCookie -> headers.add("Cookie", csrfCookie));
+    // Add CSRF token also as header - otherwise you get an 403 FORBIDDEN
+    headers.set(X_CSRF_TOKEN, response.getHeaders().get(X_CSRF_TOKEN).getFirst());
+    final var request = new HttpEntity<>("{}", headers);
+    final var internalAPIresponse =
+        testRestTemplate.postForEntity("/api/processes/grouped", request, Object.class);
+    assertThat(internalAPIresponse.getStatusCode()).isEqualTo(HttpStatus.OK);
   }
 
   @Test
-  public void testCanParseResponseWithConnectorsUrl() throws Exception {
+  public void requestToPublicAPIShouldSucceedWithoutCSRF() throws Exception {
+    mockPermissionAllowed();
+    // Step 1 try to access document root
+    ResponseEntity<String> response = get(ROOT);
+    final HttpEntity<?> cookies = httpEntityWithCookie(response);
 
-    // given
-    final String jsonResponse =
-        "[{\"uuid\":null,\"name\":null,\"urls\":{\"connectors\":\"http://connectors-url\"}}]";
+    assertThatRequestIsRedirectedTo(response, urlFor(LOGIN_RESOURCE));
 
-    // when
-    final ClusterMetadata[] clusterMetadatas =
-        objectMapper.readValue(jsonResponse, ClusterMetadata[].class);
+    // Step 2 Get Login provider url
+    response = get(LOGIN_RESOURCE, cookies);
+    assertThat(redirectLocationIn(response))
+        .contains(
+            operateProperties.getAuth0().getDomain(),
+            SSO_CALLBACK_URI,
+            operateProperties.getAuth0().getClientId(),
+            operateProperties.getAuth0().getDomain());
+    // Step 3 Call back uri with valid userinfos
+    // mock building tokens
+    given(authenticationController.handle(isNotNull(), isNotNull()))
+        .willReturn(
+            orgExtractor.apply(
+                operateProperties.getAuth0().getClaimName(),
+                operateProperties.getCloud().getOrganizationId()));
 
-    // then
-    assertThat(clusterMetadatas.length).isEqualTo(1);
-    assertThat(clusterMetadatas[0].getUrls().get(ClusterMetadata.AppName.CONNECTORS))
-        .isEqualTo("http://connectors-url");
+    response = get(SSO_CALLBACK_URI, cookies);
+    assertThatRequestIsRedirectedTo(response, urlFor(ROOT));
+
+    final var headers = new HttpHeaders();
+    headers.setContentType(MediaType.APPLICATION_JSON);
+    headers.add("Cookie", cookies.getHeaders().get("Cookie").getFirst());
+    headers.setBearerAuth("bearerToken");
+    final var request = new HttpEntity<>("{}", headers);
+    final var publicAPIresponse =
+        testRestTemplate.postForEntity("/v1/process-definitions/search", request, Object.class);
+    assertThat(publicAPIresponse.getStatusCode()).isEqualTo(HttpStatus.OK);
   }
 
-  private HttpEntity<?> httpEntityWithCookie(ResponseEntity<String> response) {
+  private HttpEntity<?> httpEntityWithCookie(final ResponseEntity<String> response) {
     final HttpHeaders headers = new HttpHeaders();
-    headers.add("Cookie", response.getHeaders().get("Set-Cookie").get(0));
+    headers.add("Cookie", response.getHeaders().get("Set-Cookie").getFirst());
     return new HttpEntity<>(new HashMap<>(), headers);
   }
 
@@ -492,22 +318,18 @@ public class AuthenticationIT implements AuthenticationTestable {
     assertThat(response.getBody()).contains("No permission for Operate");
   }
 
-  protected void assertThatRequestIsRedirectedTo(ResponseEntity<?> response, String url) {
+  protected void assertThatRequestIsRedirectedTo(
+      final ResponseEntity<?> response, final String url) {
     assertThat(response.getStatusCode()).isEqualTo(HttpStatus.FOUND);
     assertThat(redirectLocationIn(response)).isEqualTo(url);
   }
 
-  private ResponseEntity<String> get(String path, HttpEntity<?> requestEntity) {
+  private ResponseEntity<String> get(final String path, final HttpEntity<?> requestEntity) {
     return testRestTemplate.exchange(path, HttpMethod.GET, requestEntity, String.class);
   }
 
-  private String urlFor(String path) {
+  private String urlFor(final String path) {
     return String.format("http://localhost:%d%s%s", randomServerPort, CONTEXT_PATH, path);
-  }
-
-  @Override
-  public TestRestTemplate getTestRestTemplate() {
-    return testRestTemplate;
   }
 
   private void mockPermissionAllowed() {
@@ -520,64 +342,27 @@ public class AuthenticationIT implements AuthenticationTestable {
         new ResponseEntity<>(clusterInfo, HttpStatus.OK);
 
     when(restTemplate.exchange(
-            eq("https://permissionurl/3"), eq(HttpMethod.GET), (HttpEntity) any(), (Class) any()))
+            eq("https://permissionurl/3"), eq(HttpMethod.GET), any(), (Class) any()))
         .thenReturn(clusterInfoResponseEntity);
   }
 
-  private void mockNoReadPermission() {
-    final ClusterInfo.OrgPermissions operate =
-        new ClusterInfo.OrgPermissions(null, new ClusterInfo.Permission(false, true, true, true));
-
-    final ClusterInfo.OrgPermissions cluster = new ClusterInfo.OrgPermissions(operate, null);
-    final ClusterInfo clusterInfo = new ClusterInfo("Org Name", cluster, OPERATE_TEST_SALESPLAN);
-    final ResponseEntity<ClusterInfo> clusterInfoResponseEntity =
-        new ResponseEntity<>(clusterInfo, HttpStatus.OK);
-
-    when(restTemplate.exchange(
-            eq("https://permissionurl/3"), eq(HttpMethod.GET), (HttpEntity) any(), (Class) any()))
-        .thenReturn(clusterInfoResponseEntity);
+  private Optional<String> getCsrfCookie(final ResponseEntity<?> response) {
+    return getCookies(response).stream().filter(key -> key.startsWith(X_CSRF_TOKEN)).findFirst();
   }
 
-  private void mockNoWritePermission() {
-    final ClusterInfo.OrgPermissions operate =
-        new ClusterInfo.OrgPermissions(null, new ClusterInfo.Permission(true, false, false, false));
-
-    final ClusterInfo.OrgPermissions cluster = new ClusterInfo.OrgPermissions(operate, null);
-    final ClusterInfo clusterInfo = new ClusterInfo("Org Name", cluster, OPERATE_TEST_SALESPLAN);
-    final ResponseEntity<ClusterInfo> clusterInfoResponseEntity =
-        new ResponseEntity<>(clusterInfo, HttpStatus.OK);
-
-    when(restTemplate.exchange(
-            eq("https://permissionurl/3"), eq(HttpMethod.GET), (HttpEntity) any(), (Class) any()))
-        .thenReturn(clusterInfoResponseEntity);
+  private String redirectLocationIn(final ResponseEntity<?> response) {
+    final URI location = response.getHeaders().getLocation();
+    if (location != null) {
+      return location.toString();
+    }
+    return null;
   }
 
-  private void mockClusterMetadata() {
-    final ClusterMetadata clusterMetadata =
-        new ClusterMetadata()
-            .setName("test-cluster")
-            .setUuid("test-clusterId")
-            .setUrls(
-                Map.of(
-                    ClusterMetadata.AppName.OPERATE, "http://operate-url",
-                    ClusterMetadata.AppName.TASKLIST, "http://tasklist-url",
-                    ClusterMetadata.AppName.OPTIMIZE, "http://optimize-url",
-                    ClusterMetadata.AppName.ZEEBE, "grpc://zeebe-url"));
-    final ClusterMetadata[] clusterMetadatas = new ClusterMetadata[] {clusterMetadata};
-    when(restTemplate.exchange(
-            eq("https://consoleUrl/external/organizations/3/clusters"),
-            eq(HttpMethod.GET),
-            (HttpEntity) any(),
-            eq(ClusterMetadata[].class)))
-        .thenReturn(new ResponseEntity<>(clusterMetadatas, HttpStatus.OK));
+  private List<String> getCookies(final ResponseEntity<?> response) {
+    return Optional.ofNullable(response.getHeaders().get("Set-Cookie")).orElse(List.of());
   }
 
-  private void mockEmptyClusterMetadata() {
-    when(restTemplate.exchange(
-            eq("https://consoleUrl/external/organizations/3/clusters"),
-            eq(HttpMethod.GET),
-            (HttpEntity) any(),
-            eq(ClusterMetadata[].class)))
-        .thenReturn(new ResponseEntity<>(null, HttpStatus.NOT_FOUND));
+  private ResponseEntity<String> get(final String path) {
+    return testRestTemplate.getForEntity(path, String.class);
   }
 }
